--- a/frontend/src/pages/AdminAddBook.css
+++ b/frontend/src/pages/AdminAddBook.css
@@ -7,6 +7,7 @@ div.ReactTags__tagInput {
     width: 200px;
     border-radius: 2px;
     display: inline-block;
+    margin-bottom: 5px;
 }
 div.ReactTags__tagInput input.ReactTags__tagInputField,
 div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
